--- a/.github/workflows/build-it.yaml
+++ b/.github/workflows/build-it.yaml
@@ -11,17 +11,15 @@ name: Build it
 jobs:
   Build:
     runs-on: ubuntu-latest
+    container: rocker/tidyverse:4.2.2
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-      R_KEEP_PKG_SOURCE: yes
     steps:
       - uses: actions/checkout@v3
-
-      - uses: r-lib/actions/setup-r@v2
         with:
-          use-public-rspm: true
-
+          fetch-depth: 0
+    
       - name: Install dependencies
         run: |
-          Rscript --vanilla -e 'install.packages("slurmR")'
+          install2.r slurmR rgexf fmcmc
 
