--- a/.github/workflows/build-it.yaml
+++ b/.github/workflows/build-it.yaml
@@ -21,7 +21,9 @@ jobs:
     
       - name: Install dependencies
         run: |
-          apt update && apt install quarto -y --no-install-recommends
+          apt update
+          wget https://github.com/quarto-dev/quarto-cli/releases/download/v1.3.330/quarto-1.3.330-linux-amd64.deb .
+          apt install ./quarto-1.3.330-linux-amd64.deb -y
           install2.r xml2 quarto
           quarto render README.qmd
           
