--- a/.github/workflows/build-it.yaml
+++ b/.github/workflows/build-it.yaml
@@ -19,10 +19,13 @@ jobs:
         with:
           fetch-depth: 0
     
-      - name: Install dependencies
+      # Installing quarto
+      - uses: quarto-dev/quarto-actions/setup@v2
+        with:
+          version: 0.3.71
+    
+      - name: Install packags
         run: |
-          apt update
-          wget https://github.com/quarto-dev/quarto-cli/releases/download/v1.3.330/quarto-1.3.330-linux-amd64.deb .
           apt install ./quarto-1.3.330-linux-amd64.deb -y
           install2.r xml2 quarto
           quarto render README.qmd
