--- a/.github/workflows/build-it.yaml
+++ b/.github/workflows/build-it.yaml
@@ -29,12 +29,8 @@ jobs:
           install2.r xml2 quarto
           quarto render README.qmd
           
-      - name: Commit and push changes
-        run: |
-          git config --local user.name "$GITHUB_ACTOR"
-          git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
-          git add README.md
-          git commit -m "Update documentation" || echo "No changes to commit"
-          git pull --ff-only
-          git push origin
-
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          pattern: 'README.*'
+          commit_message: Updated README (auto)
+          
