--- a/.github/workflows/build-it.yaml
+++ b/.github/workflows/build-it.yaml
@@ -14,6 +14,10 @@ jobs:
     container: rocker/tidyverse:4.2.2
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+    permissions:
+      # Give the default GITHUB_TOKEN write permission to commit and push the
+      # added or changed files to the repository.
+      contents: write  
     steps:
       - uses: actions/checkout@v3
         with:
@@ -31,6 +35,6 @@ jobs:
           
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          pattern: 'README.*'
+          file_pattern: 'README.*'
           commit_message: Updated README (auto)
           
