--- a/.github/workflows/build-it.yaml
+++ b/.github/workflows/build-it.yaml
@@ -33,8 +33,12 @@ jobs:
           install2.r xml2 quarto
           quarto render README.qmd
           
-      - uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          file_pattern: 'README.*'
-          commit_message: Updated README (auto)
+      - name: Adding and pushing
+        run: |
+          git config --global user.name "$GITHUB_ACTOR"
+          git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com"
+          git add README.md
+          git commit -m "Update documentation" || echo "No changes to commit"
+          git pull --ff-only
+          git push origin
           
