--- a/.github/workflows/build-it.yaml
+++ b/.github/workflows/build-it.yaml
@@ -14,10 +14,15 @@ jobs:
     container: rocker/tidyverse:4.2.2
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      GITHUB_REPO: ${{ github.event.repository.name }}
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          
+      - name: Try
+        run: |
+          echo $GITHUB_REPO  
     
       # Installing quarto
       - uses: quarto-dev/quarto-actions/setup@v2
