--- a/.github/workflows/build-it.yaml
+++ b/.github/workflows/build-it.yaml
@@ -19,10 +19,6 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          
-      - name: Try
-        run: |
-          echo $GITHUB_REPO  
     
       # Installing quarto
       - uses: quarto-dev/quarto-actions/setup@v2
@@ -39,7 +35,7 @@ jobs:
       # https://git-scm.com/docs/git-config#Documentation/git-config.txt-safedirectory
       - name: Dealing with GitConfig
         run: |
-          git config --global --add safe.directory /__w/PHS-7045-egga/PHS-7045-egga
+          git config --global --add safe.directory /__w/${GITHUB_REPO}/${GITHUB_REPO}
           
       - uses: EndBug/add-and-commit@v9
         with:
